# osm-camps-and-bbq

./: .gitignore  README.md  justfile  pyproject.toml
output/: bathing_places_sweden_20260715.gpx  bbq_sweden_20260715.gpx  campwild_100m_3969_kluster_av_4073_punkter_20260715.gpx  firepits_sweden_20260715.gpx  grillplatser_100m_5996_kluster_av_7231_punkter_20260715.gpx  lean_tos_sweden_20260715.gpx  public_baths_sweden_20260715.gpx  wilderness_huts_sweden_20260715.gpx
scripts/: fetch_pbf.sh
src/: campwild.py  cli.py  export_bathing_places.py  export_bbqs.py  export_firepits.py  export_lean_tos.py  export_public_baths.py  export_wilderness_huts.py  gpx.py
src/grill_karta/: __init__.py  cli.py  cluster.py  extract.py  gpx.py
